--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ Tags: one-column, right-sidebar, left-sidebar, fluid-layout, responsive-layout, 
 	background-color: olive;
 }
 
+.site-title {
+	color: olive;
+}
+
 /* Change the main link color to dark blue. Note that the hover color is set using a 
  * neat trick with the opacity tag. This simply lightens whatever the link color is. That
  * way we don't need to try to figure out a hover color that looks good. 
