Second test of changing site-title via github

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ Tags: one-column, right-sidebar, left-sidebar, fluid-layout, responsive-layout, 
 	background-color: olive;
 }
 
-.site-title {
+.site-title a {
 	color: olive;
 }
 
