--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ a:focus {
 	margin-right: 3%;
 }
 
+#site-branding {
+	background-color: white;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
 .navbar-static-top {
 	background-color: black;
 	color: white;
