--- a/style.css
+++ b/style.css
@@ -72,8 +72,8 @@ a:focus {
 	padding-bottom: 20px;
 }
 .navbar-static-top {
-	background-color: black;
-	color: white;
+	background-color: white;
+	color: black;
 }
 
 .currentissueheader img {
@@ -86,6 +86,7 @@ a:focus {
 	align-content: flex-end;
 }
 
-.site-logo-onscroll {
+#wanderwomenlogoonscroll {
 	visibility: hidden;
+	height: 40px;
 }
