--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a:focus {
 	margin-right: 3%;
 }
 
-#site-branding {
+.navbar.navbar-fixed-top {
 	background-color: white;
 	padding-top: 20px;
 	padding-bottom: 20px;
@@ -86,7 +86,7 @@ a:focus {
 	align-content: flex-end;
 }
 
-#wanderwomenlogoonscroll {
+.wanderwomenlogoonscroll {
 	visibility: hidden;
 	height: 40px;
 }
