--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ a:focus {
 	margin-right: 3%;
 }
 #site-branding {
-	margin-top: 60px;
+	margin-top: 80px;
+	background-color: white;
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
