--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a:focus {
 	margin-right: 3%;
 }
 #site-branding {
-	margin-top: 80px;
+	margin-top: 70px;
 	background-color: white;
 	padding-top: 20px;
 	padding-bottom: 20px;
@@ -93,4 +93,8 @@ a:focus {
 
 .wanderwomenlogoonscroll {
 	height: 60px;
+}
+
+.black{
+	background-color: black;
 }
