--- a/style.css
+++ b/style.css
@@ -71,6 +71,24 @@ a:focus {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
+#site-branding .container {
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+	grid-template-columns: repeat(10, 1fr);
+	
+}
+
+.site-logo {
+	grid-column: 1/4;
+	grid-row: 1/3;
+}
+
+.currentissueheader {
+	grid-column: 6/10;
+	grid-row: 1/3;
+}
+
 .navbar.navbar-fixed-top {
 	padding-top: 10px;
 	padding-bottom: 10px;
