--- a/style.css
+++ b/style.css
@@ -85,11 +85,11 @@ a:focus {
 }
 
 .currentissueheader {
-	grid-column: 6/10;
+	grid-column: 6/11;
 	grid-row: 1/3;
 	display: grid;
 	grid-template-rows: 1fr 1fr;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
 .issuecover {
@@ -98,7 +98,7 @@ a:focus {
 }
 
 .currentissuegroup {
-	grid-column: 2/3;
+	grid-column: 3/4;
 	grid-row: 1/3;
 }
 
