--- a/style.css
+++ b/style.css
@@ -146,6 +146,10 @@ a:focus {
 }
 
 .navbar-default .navbar-nav>li>a {
-	
+	color: white;
 	font-family: GraphikRegular; 
+}
+
+.blacklink {
+	color: black; !important
 }
