--- a/style.css
+++ b/style.css
@@ -145,14 +145,14 @@ a:focus {
 	color: black;
 }
 
-.navbar-default .navbar-nav>li>a {
+.navbar-nav>li>a {
 	
 	font-family: GraphikRegular; 
 	transition: .5s ease;
 }
 
 .whitelink {
-	color: white;
+	color: white; !important
 }
 .blacklink {
 	color: black; !important
