--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ a:focus {
 	color: black;
 }
 
-.navbar-nav>li>a {
+.navbar-default .navbar-nav>li>a {
 	color: white;!important
 	font-family: GraphikRegular; 
 	transition: .5s ease;
