--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ a:focus {
 	background-color: white;
 	padding-top: 20px;
 	padding-bottom: 20px;
+	border-bottom: 2px black solid;
 }
 
 #site-branding .container {
@@ -155,3 +156,6 @@ a:focus {
 	transition: .5s ease;
 }
 
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
+	background-color: none; !important
+}
