--- a/style.css
+++ b/style.css
@@ -158,4 +158,5 @@ a:focus {
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
 	background-color: none; !important
+	text-decoration: underline;
 }
