--- a/style.css
+++ b/style.css
@@ -214,6 +214,9 @@ button {
 	grid-column: 2/8;
 	z-index: 10;
 	height: 100vh;
+	max-height: 800px;
+    width: 100%;
+    min-width: 800px;
 }
 
 #featured h1 {
