--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
 
 h1, h2, h3 {
 	font-family: 'Rubik', sans-serif;
+
 }
 
 h4 {
@@ -198,7 +199,8 @@ button {
 	grid-row: 2/3;
 	grid-column: 7/10;
 	font-size: 150px;
-	font-weight: bold;
+	font-weight: 500;
+	font-color: black;
 	line-height: 110px;
 	z-index: 100;
 }
