--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ button {
 }
 
 #currentissue {
-	height: 100%;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
 	
@@ -238,4 +238,5 @@ button {
 
 #currentissue img {
 	max-width: 50%;
+	max-height: 100vh;
 }
