--- a/style.css
+++ b/style.css
@@ -233,10 +233,11 @@ button {
 	height: 100vh;
 	display: flex;
 	justify-content: center;
-	
+	align-content: center;
+	padding: 1em;
 }
 
 #currentissue img {
 	max-width: 50%;
-	max-height: 100vh;
+	max-height: 80vh;
 }
