--- a/style.css
+++ b/style.css
@@ -234,10 +234,9 @@ button {
 	display: flex;
 	justify-content: center;
 	align-content: center;
-	padding: 1em;
+	padding: 2vh 2vw;
 }
 
 #currentissue img {
-	max-width: 50%;
-	max-height: 80vh;
+	max-height: 70vh;
 }
