--- a/style.css
+++ b/style.css
@@ -235,8 +235,9 @@ button {
 	justify-content: center;
 	align-content: center;
 	padding: 2vh 2vw;
+	baclground-color: black;
 }
 
 #currentissue img {
-	max-height: 70vh;
+	max-width: 50vw;
 }
