--- a/style.css
+++ b/style.css
@@ -230,16 +230,18 @@ button {
 }
 
 #currentissue {
-	height: 100vh;
+	height: 50vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-top: 2vh;
+	margin-bottom: 2vh;
 	padding: 2vh 2vw;
 	background-color: black;
 }
 
 #currentissue img {
-	height: 80vh;
+	height: 45vh;
 	width: auto;
 }
 
