--- a/style.css
+++ b/style.css
@@ -237,7 +237,6 @@ button {
 	margin-top: 40px;
 	margin-bottom: 40px;
 	padding: 2vh 2vw;
-	background-color: black;
 }
 
 #currentissue img {
@@ -246,5 +245,5 @@ button {
 }
 
 .fluidblack {
-	background-color: black;
+	background-color: #0da5dc;
 }
