--- a/style.css
+++ b/style.css
@@ -164,7 +164,9 @@ a:focus {
 	transition: .5s ease;
 }
 
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
+.navbar-default .navbar-nav>.active > a, 
+.navbar-default .navbar-nav>.active> a:hover, 
+.navbar-default .navbar-nav>.active>a:focus {
 	background-color: none; !important
 	text-decoration: underline;
 	font-family: 'Rubik', sans-serif;
@@ -247,4 +249,8 @@ button {
 	margin-top: 40px;
 	margin-bottom: 40px;
 	background-color: #0da5dc;
+}
+
+#sidebar-pagebottom img {
+	max-width: 40vw;
 }
