--- a/style.css
+++ b/style.css
@@ -177,6 +177,11 @@ button {
 	border-color: #0da5dc;
 }
 
+button: hover,
+button: focus {
+	background-color: #0e809e;
+}
+
 /* featured styles */
 
 #featured {
