--- a/style.css
+++ b/style.css
@@ -178,8 +178,7 @@ button {
 }
 
 button:hover, button:focus, html input[type="button"]:hover, html input[type="button"]:focus, input[type="submit"]:hover, input[type="submit"]:focus {
-	background-color: #1b75bc; !important
-	border-color: #1b75bc; !important
+	box-shadow: 1px 1px 1px grey;
 }
 
 /* featured styles */
