--- a/style.css
+++ b/style.css
@@ -178,8 +178,8 @@ button {
 }
 
 button:hover, button:focus, html input[type="button"]:hover, html input[type="button"]:focus, input[type="submit"]:hover, input[type="submit"]:focus {
-	background-color: #0da5dc; !important
-	border-color: #0da5dc; !important
+	background-color: #2980b9; !important
+	border-color: #2980b9; !important
 	box-shadow: 1px 1px 1px grey;
 }
 
