--- a/style.css
+++ b/style.css
@@ -268,6 +268,11 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 	background-color: #0da5dc;
 }
 
+.countryfluid {
+	margin: 0;
+	padding: 0;
+}
+
 #sidebar-pagebottom aside .container img {
 	max-width: 40vw;
 }
