--- a/style.css
+++ b/style.css
@@ -268,9 +268,10 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 	background-color: #0da5dc;
 }
 
-.countryfluid {
-	margin: 0;
-	padding: 0;
+.country-fluid {
+	margin-left: 0;
+	margin-top: 0;
+	padding-left: 0;
 }
 
 #sidebar-pagebottom aside .container img {
