--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 	width: auto;
 }
 
-.featured-country div {
+#featured-country div {
 	margin: 0;
 }
 .featured-country-text {
