--- a/style.css
+++ b/style.css
@@ -264,11 +264,12 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-right: 40px;
+	margin-right: 60px;
 }
 
 .fluidblack {
-	margin-top: 40px;
+	margin-top: 60px;
+	margin-bottom: 60px;
 	background-color: #0da5dc;
 }
 
