--- a/style.css
+++ b/style.css
@@ -262,9 +262,7 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 .featured-country-text {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	margin-right: 60px;
+	margin: 40px;
 }
 
 .fluidblack {
