--- a/style.css
+++ b/style.css
@@ -116,13 +116,14 @@ a:focus {
 }
 
 .issuecover {
-	grid-column: 1/2;
+	grid-column: 1/3;
 	grid-row: 1/3;
 }
 
 .currentissuegroup {
 	grid-column: 2/3;
 	grid-row: 1/3;
+	margin-left: -20%;
 }
 
 .navbar.navbar-fixed-top {
