--- a/style.css
+++ b/style.css
@@ -138,7 +138,9 @@ a:focus {
 	grid-row: 1/3;
 	margin-left: -30%;
 }
-
+.navbar {
+	max-width: 100%;
+}
 .navbar.navbar-fixed-top {
 	padding-top: 10px;
 	padding-bottom: 10px;
