--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	padding-left: 0;
-	padding-right: 0;
+	padding-left: 0; !important
+	padding-right: 0; !important
 }
 
 .container-fluid .row {
