--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ a:focus {
 	color: white; !important
 	font-family: 'Rubik', sans-serif;
 	transition: .5s ease;
+	font-weight: bold;
 }
 
 .navbar-default .navbar-nav>.active > a, 
@@ -244,6 +245,7 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 
 #featuredtitle h2 {
 	font-size: 40px;
+	color: black;
 	transform: rotate(-90deg);
 }
 
@@ -282,6 +284,19 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 	display: flex;
 	flex-direction: column;
 }
+
+.featured-country-text h1 {
+	text-transform: uppercase;
+	margin-bottom: 0;
+	font-weight: 500;
+}
+
+.featured-country-text h4 {
+	background-color: #0da5dc;
+	color: white;
+	padding: 10px;
+}
+
 
 .fluidblack {
 	margin-top: 60px;
