--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ h1, h2, h3 {
 }
 
 h3 {
-	font-weight: 500;
-	text-transform: uppercase;
+	font-weight: 500; !important
+	text-transform: uppercase; !important
 }
 
 h4 {
