--- a/style.css
+++ b/style.css
@@ -351,5 +351,20 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 
 .after-footer {
 	max-width: 100%;
-	bckground: black;
+	background: black;
+}
+
+.footer-info {
+	display: flex;
+	flex-direction: column;
+	border-top: 3px black solid;
+	padding: 20px;
+		border-bottom: 3px black solid;
+	margin: 20px;
+}
+
+.socialmedia-row {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
