--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 
 .sectionimg {
 	max-height: 400px;
+	padding-right: 5px;
 }
 
 .sectionpost {
@@ -366,4 +367,13 @@ margin-top: 20px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+}
+
+.linebackground {
+	background-image: url(http://wanderwomen.atiagina.com/wp-content/uploads/2017/11/line.png);
+	background-size: 5px 5px;
+	overflow: hidden;
+background-repeat: repeat;
+background-position: right top;
+	
 }
