--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
 	flex-direction: column;
 	padding-left: 0; !important
 	padding-right: 0; !important
+	margin-right:0;
 }
 
 .container-fluid .row {
