--- a/style.css
+++ b/style.css
@@ -72,10 +72,10 @@ h3 {
 	font-weight: 500; !important
 	
 }
-
+/*
 h3 a {
 	text-transform: uppercase; !important
-}
+}*/
 
 h4 {
 	font-family: 'Rubik', sans-serif;
