--- a/style.css
+++ b/style.css
@@ -72,12 +72,13 @@ h3 {
 	font-weight: 500; !important
 	
 }
+/*
 
 h3 a {
 	padding-bottom: 10px;
 	border-bottom: #0da5dc solid 5px;
 }
-
+*/
 h4 {
 	font-family: 'Rubik', sans-serif;
 }
