--- a/style.css
+++ b/style.css
@@ -431,3 +431,23 @@ text-decoration: none;
 white-space: nowrap;
 }
 
+div.interviewgrid1 {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	gird-template-rows: auto;
+}
+
+.interviewhero {
+	grid-columns: 1/6;
+	grid-rows: 2/8;
+}
+
+.interviewheadline {
+	grid-columns: 5/9;
+	grid-rows: 1/3;
+}
+
+.interviewintro {
+	grid-columns: 6/9;
+	grid-rows: 4/8;
+}
