--- a/style.css
+++ b/style.css
@@ -435,8 +435,8 @@ div.interviewgrid1 {
 	width: 100%;
 	height: 100%;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-	gird-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-column: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-row: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 div.interviewgrid1 .interviewhero {
