--- a/style.css
+++ b/style.css
@@ -435,21 +435,21 @@ div.interviewgrid1 {
 	width: 100%;
 	height: 100%;
 	display: grid;
-	grid-template-column: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-	grid-template-row: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 div.interviewgrid1 .interviewhero {
-	grid-columns: 1/6;
-	grid-rows: 2/8;
+	grid-column: 1/6;
+	grid-row: 2/8;
 }
 
 div.interviewgrid1 .interviewheadline {
-	grid-columns: 5/9;
-	grid-rows: 1/3;
+	grid-column: 5/9;
+	grid-row: 1/3;
 }
 
 div.interviewgrid1 .interviewintro {
-	grid-columns: 6/9;
-	grid-rows: 4/8;
+	grid-column: 6/9;
+	grid-row: 4/8;
 }
