--- a/style.css
+++ b/style.css
@@ -447,9 +447,13 @@ div.interviewgrid1 .interviewhero {
 div.interviewgrid1 .interviewheadline {
 	grid-column: 5/9;
 	grid-row: 1/3;
+	font-size: calc(22px+4vh);
+	font-weight: bold;
 }
 
 div.interviewgrid1 .interviewintro {
 	grid-column: 6/9;
 	grid-row: 4/8;
+	font-weight: bold;
+	font-size: calc(16px + 2vh);
 }
