--- a/style.css
+++ b/style.css
@@ -447,7 +447,7 @@ div.interviewgrid1 .interviewhero {
 div.interviewgrid1 .interviewheadline {
 	grid-column: 5/9;
 	grid-row: 1/3;
-	font-size: calc(22px+4vh);
+	font-size: calc(2vw + 2vh + 2vmin);
 	font-weight: bold;
 }
 
