--- a/style.css
+++ b/style.css
@@ -447,8 +447,9 @@ div.interviewgrid1 .interviewhero {
 div.interviewgrid1 .interviewheadline {
 	grid-column: 5/9;
 	grid-row: 1/3;
-	font-size: calc(2vw + 2vh + 2vmin);
+	font-size: calc(4vw + 4vh + 2vmin);
 	font-weight: bold;
+	z-index: 500;
 }
 
 div.interviewgrid1 .interviewintro {
