--- a/style.css
+++ b/style.css
@@ -456,7 +456,7 @@ div.interviewgrid1 .interviewheadline {
 
 div.interviewgrid1 .interviewintro {
 	grid-column: 6/9;
-	grid-row: 4/6;
+	grid-row: 4/5;
 	font-weight: bold;
-	font-size: calc(16px + 2vh);
+	font-size: 18px;
 }
