--- a/style.css
+++ b/style.css
@@ -458,11 +458,11 @@ div.interviewgrid1 .interviewintro {
 	grid-column: 6/9;
 	grid-row: 4/5;
 	font-weight: bold;
-	font-size: calc(16px + 2vw);
+	font-size: calc(16px + 2vh);
 }
 
 .questionstyle {
-	font-size: calc(16px + 1vw);
+	font-size: calc(16px + 1vh);
 	font-weight: bold;
 }
 
@@ -483,5 +483,6 @@ div.interviewgrid2 {
 	grid-column: 3/6;
 	grid-row: 2/4;
 	font-size: calc(2vw + 2vh + 1vmin);
+	background-color: rgba(250,250,250,0.5);
 }
 
