--- a/style.css
+++ b/style.css
@@ -459,7 +459,7 @@ div.interviewgrid1 .interviewintro {
 	grid-column: 6/9;
 	grid-row: 4/5;
 	font-weight: bold;
-	font-size: calc(16px + 2vh);
+	font-size: calc(16px + 1vh);
 }
 
 .questionstyle {
@@ -490,3 +490,23 @@ div.interviewgrid2 {
 	padding: 10px;
 }
 
+div.interviewgrid3 {
+	display: grid;
+	height: 100%;
+	width: 100%;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr;
+	margin: 40px 0;
+}
+.interviewimage2 {
+	grid-column: 3/6;
+	grid-row: 1/4;
+}
+
+.interviewquote2 {
+	grid-column: 1/4;
+	grid-row: 2/3;
+	font-size: calc(2vw + 2vh + 1vmin);
+	background-color: rgba(250,250,250,0.5);
+	padding: 10px;
+}
