--- a/style.css
+++ b/style.css
@@ -437,7 +437,7 @@ div.interviewgrid1 {
 	display: grid;
 	margin: 40px 0;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows:auto;
 }
 
 div.interviewgrid1 .interviewhero {
@@ -457,7 +457,7 @@ div.interviewgrid1 .interviewheadline {
 
 div.interviewgrid1 .interviewintro {
 	grid-column: 6/9;
-	grid-row: 4/5;
+	grid-row: 4/6;
 	font-weight: bold;
 	font-size: calc(16px + 1vh);
 }
@@ -473,7 +473,7 @@ div.interviewgrid2 {
 	height: 100%;
 	width: 100%;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr;
+	grid-template-rows: auto;
 	margin: 40px 0;
 }
 
@@ -486,7 +486,7 @@ div.interviewgrid2 {
 	grid-column: 3/6;
 	grid-row: 2/3;
 	font-size: calc(2vw + 2vh + 1vmin);
-	background-color: rgba(250,250,250,0.5);
+	background-color: rgba(250,250,250,0.7);
 	padding: 10px;
 }
 
@@ -495,7 +495,7 @@ div.interviewgrid3 {
 	height: 100%;
 	width: 100%;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr;
+	grid-template-rows: auto;
 	margin: 40px 0;
 }
 .interviewimage2 {
@@ -507,6 +507,6 @@ div.interviewgrid3 {
 	grid-column: 1/4;
 	grid-row: 2/3;
 	font-size: calc(2vw + 2vh + 1vmin);
-	background-color: rgba(250,250,250,0.5);
+	background-color: rgba(250,250,250,0.7);
 	padding: 10px;
 }
