--- a/style.css
+++ b/style.css
@@ -449,6 +449,7 @@ div.interviewgrid1 .interviewheadline {
 	grid-column: 5/9;
 	grid-row: 1/3;
 	font-size: calc(4vw + 4vh + 2vmin);
+	line-height: 1.2em;
 	font-weight: bold;
 	z-index: 500;
 	color: darkmagenta;
@@ -466,6 +467,7 @@ div.interviewgrid1 .interviewintro {
 	font-size: calc(16px + 2vh);
 	font-weight: bold;
 	color: darkmagenta;
+	margin-left: -1em;
 }
 
 div.interviewgrid2 {
