--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 	color: white;
 	width: 100%;
 	padding: 5px;
-	font-weigth: 500;
+	font-weight: 500;
 }
 
 .after-footer {
