--- a/style.css
+++ b/style.css
@@ -534,4 +534,30 @@ div.interviewgrid3 {
 	padding: 10px;
 }
 
+/* pictures */
 
+.picturegrid1 {
+	height: 100%;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: auto;
+}
+
+.picturemain {
+	grid-column: 1/5;
+	grid-row: 2/4;
+}
+
+.pictureheadline {
+	grid-column: 4/6;
+	grid-row: 1/3;
+	z-index: 600;
+	
+}
+
+.pictureintro {
+	grid-column: 5/6;
+	grid-row: 3/4;
+	z-index: 610;
+}
