--- a/style.css
+++ b/style.css
@@ -554,6 +554,7 @@ div.interviewgrid3 {
 	grid-row: 1/3;
 	z-index: 600;
 	font-size: 3em;
+	text-shadow: 0px 0px 1px black;
 }
 
 .pictureheadline h1 {
