--- a/style.css
+++ b/style.css
@@ -554,6 +554,8 @@ div.interviewgrid3 {
 	grid-row: 1/4;
 	z-index: 600;
 	font-size: 3em;
+	background-color: rgba(255,255,255,0.5);
+	padding-left: 5px;
 	
 }
 
