--- a/style.css
+++ b/style.css
@@ -572,3 +572,31 @@ div.interviewgrid3 {
 	z-index: 610;
 	text-shadow: 0px 0px 1px black;
 }
+
+.picture1, .picture2 {
+	height: 100%;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-rows: auto;
+}
+
+.picture1 .picturearea{
+	grid-column: 1/5;
+	grid-row: 1/4;
+}
+
+.picture2 .picturearea{
+	grid-column: 2/6;
+	grid-row: 1/4;
+}
+
+.picture1 .captionarea{
+	grid-column: 4/6;
+	grid-row: 2/4;
+}
+
+.picture2 .captionarea{
+	grid-column: 1/3;
+	grid-row: 1/3;
+}
