--- a/style.css
+++ b/style.css
@@ -592,11 +592,19 @@ div.interviewgrid3 {
 }
 
 .picture1 .captionarea{
-	grid-column: 4/6;
-	grid-row: 2/4;
+	grid-column: 5/6;
+	grid-row: 3/4;
 }
 
 .picture2 .captionarea{
-	grid-column: 1/3;
-	grid-row: 1/3;
+	grid-column: 1/2;
+	grid-row: 2/3;
+}
+
+.captionarea p {
+	background-color: black;
+	color: white;
+	font-weight: 500;
+	padding: 10px;
+
 }
