--- a/style.css
+++ b/style.css
@@ -579,6 +579,7 @@ div.interviewgrid3 {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	grid-template-rows: auto;
+	margin: 40px 0;
 }
 
 .picture1 .picturearea{
