--- a/style.css
+++ b/style.css
@@ -595,11 +595,14 @@ div.interviewgrid3 {
 .picture1 .captionarea{
 	grid-column: 5/6;
 	grid-row: 3/4;
+	margin-left: -20px;
+	
 }
 
 .picture2 .captionarea{
 	grid-column: 1/2;
 	grid-row: 2/3;
+	margin-right: -20px;
 }
 
 .captionarea p {
@@ -607,5 +610,6 @@ div.interviewgrid3 {
 	color: white;
 	font-weight: 500;
 	padding: 10px;
+
 
 }
