--- a/style.css
+++ b/style.css
@@ -596,7 +596,7 @@ div.interviewgrid3 {
 	grid-column: 5/6;
 	grid-row: 1/2;
 	margin-left: -20px;
-	
+	margin-top: 10px;
 }
 
 .picture2 .captionarea{
