--- a/style.css
+++ b/style.css
@@ -358,6 +358,7 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-bottom: 40px;
 }
 
 .sectionpost h3 {
@@ -618,3 +619,62 @@ div.interviewgrid3 {
 .category-headline {
 	font-weight: 500;
 }
+
+
+/* media queries */
+
+@media only screen and (max-width: 768px){
+		
+		/* featured styles */
+
+#featured {
+	
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: auto;
+	height: auto;
+}
+
+#mapofcdmx {
+	grid-row: 3/6;
+	grid-column: 1/3;
+	z-index: 10;
+	width: 100%;
+}
+
+#featured h1 {
+	grid-row: 2/4;
+	grid-column: 1/13;
+	font-size: 40px;
+	font-weight: 500;
+	font-color: black;
+	line-height: 40px;
+	z-index: 100;
+}
+
+#featuredtitle {
+	grid-row: 1/2;
+	grid-column: 1/2;
+	z-index: 80;
+}
+
+#featuredtitle h2 {
+	font-size: 20px;
+	color: black;
+	transform: rotate(0deg);
+}
+
+#featuredbutton {
+	grid-row: 7/8;
+	grid-column: 2/3;
+	width: 100px;
+	z-index: 200;
+}
+
+#featured h4 {
+	grid-row: 6/7;
+	grid-column: 1/3;
+	z-index: 110;
+}
+	
+	}
