--- a/style.css
+++ b/style.css
@@ -640,12 +640,15 @@ div.interviewgrid3 {
 	grid-column: 1/3;
 	z-index: 10;
 	width: 100%;
+	height: auto;
+	min-width: 400px;
+	margin: 0 auto;
 }
 
 #featured h1 {
 	grid-row: 2/4;
 	grid-column: 1/13;
-	font-size: 40px;
+	font-size: 60px;
 	font-weight: 500;
 	font-color: black;
 	line-height: 40px;
