--- a/style.css
+++ b/style.css
@@ -647,7 +647,7 @@ div.interviewgrid3 {
 
 #featured h1 {
 	grid-row: 2/4;
-	grid-column: 1/13;
+	grid-column: 2/3;
 	font-size: 60px;
 	font-weight: 500;
 	font-color: black;
@@ -657,7 +657,7 @@ div.interviewgrid3 {
 
 #featuredtitle {
 	grid-row: 1/2;
-	grid-column: 1/2;
+	grid-column: 1/3;
 	z-index: 80;
 }
 
@@ -680,4 +680,41 @@ div.interviewgrid3 {
 	z-index: 110;
 }
 	
+	.picturegrid1 {
+	height: auto;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: auto;
+}
+
+.picturemain {
+	grid-column: 1/3;
+	grid-row: 2/4;
+}
+
+.pictureheadline {
+	grid-column: 1/3;
+	grid-row: 1/2;
+	z-index: 600;
+	font-size: 1em;
+	background-color: rgba(255,255,255,0.5);
+	padding-left: 5px;
+	
+}
+
+.pictureheadline h1 {
+	font-size: calc(4vw + 4vh + 2vmin);
+	line-height: 1em;
+	font-weight: bold;
+	text-shadow: 0px 0px 1px black;
+}
+
+.pictureintro {
+	grid-column: 1/3;
+	grid-row: 5/6;
+	z-index: 610;
+	text-shadow: 0px 0px 1px black;
+}
+
 	}
