--- a/style.css
+++ b/style.css
@@ -633,11 +633,12 @@ div.interviewgrid3 {
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: auto;
 	height: auto;
+	padding: 10px;
 }
 
 #mapofcdmx {
 	grid-row: 3/6;
-	grid-column: 1/3;
+	grid-column: 1/4;
 	z-index: 10;
 	width: 100%;
 	height: auto;
@@ -647,7 +648,7 @@ div.interviewgrid3 {
 
 #featured h1 {
 	grid-row: 2/4;
-	grid-column: 2/3;
+	grid-column: 3/4;
 	font-size: 60px;
 	font-weight: 500;
 	font-color: black;
@@ -689,12 +690,12 @@ div.interviewgrid3 {
 }
 
 .picturemain {
-	grid-column: 1/3;
+	grid-column: 1/4;
 	grid-row: 2/4;
 }
 
 .pictureheadline {
-	grid-column: 1/3;
+	grid-column: 1/4;
 	grid-row: 1/2;
 	z-index: 600;
 	font-size: 1em;
@@ -711,7 +712,7 @@ div.interviewgrid3 {
 }
 
 .pictureintro {
-	grid-column: 1/3;
+	grid-column: 1/4;
 	grid-row: 5/6;
 	z-index: 610;
 	text-shadow: 0px 0px 1px black;
