--- a/style.css
+++ b/style.css
@@ -224,6 +224,8 @@ html input[type="button"],
 input[type="submit"] {
 	background-color: #0da5dc;
 	border-color: #0da5dc;
+	font-weight: 500;
+	text-transform: lowercase;
 }
 
 button:hover, button:focus, html input[type="button"]:hover, html input[type="button"]:focus, input[type="submit"]:hover, input[type="submit"]:focus {
