--- a/style.css
+++ b/style.css
@@ -369,7 +369,8 @@ button:hover, button:focus, html input[type="button"]:hover, html input[type="bu
 	font-weight: 300;
 }
 
-.sectionpost a {
+.sectionpost a,
+a.readmore {
 	background-color: #0da5dc;
 	color: white;
 	width: 100%;
