--- a/style.css
+++ b/style.css
@@ -628,7 +628,11 @@ div.interviewgrid3 {
 	align-content: right;
 }
 
-
+.wandertop {
+	height: 100vh;
+	width: 100%;
+	
+}
 .svgmap {
 	
 	width: auto;
