--- a/style.css
+++ b/style.css
@@ -637,6 +637,7 @@ div.interviewgrid3 {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	grid-template-rows: auto;
+	margin: 40px auto;
 }
 .svgmap {
 	
