--- a/style.css
+++ b/style.css
@@ -664,6 +664,37 @@ div.interviewgrid3 {
 	grid-rows: 1/3;
 }
 
+.cdmxcard {
+	margin-top: 60px;
+	display: grid;
+	height: 60vh;
+	grid-template-columns: repeat(8, 1fr);
+	grid-template-rows: auto;
+}
+
+.cdmximg {
+	grid-column: 1/5;
+	grid-row: 1/4;
+}
+
+.cdmxtitle {
+	grid-column: 1/5;
+	grid-row: 1/2;
+}
+
+.cdmxdescription {
+	grid-column: 5/9;
+	grid-row: 1/3;
+}
+
+.wanderpicture {
+	grid-column: 5/9;
+	grid-row: 3/4;
+}
+
+
+
+
 /* media queries */
 
 @media only screen and (max-width: 768px){
