--- a/style.css
+++ b/style.css
@@ -675,11 +675,14 @@ div.interviewgrid3 {
 .cdmximg {
 	grid-column: 1/5;
 	grid-row: 2/4;
+	padding: 10px;
 }
 
 .cdmxtitle {
 	grid-column: 1/5;
 	grid-row: 1/2;
+	font-size: 2em;
+	font-weight: bold;
 }
 
 .cdmxdescription {
@@ -688,8 +691,8 @@ div.interviewgrid3 {
 }
 
 .wanderpicture {
-	grid-column: 4/7;
-	grid-row: 3/4;
+	grid-column: 4/8;
+	grid-row: 4/6;
 }
 
 .wanderpicture img {
