--- a/style.css
+++ b/style.css
@@ -667,7 +667,7 @@ div.interviewgrid3 {
 .cdmxcard {
 	padding-top: 80px;
 	display: grid;
-	height: 80vh;
+	height: auto;
 	grid-template-columns: repeat(8, 1fr);
 	grid-template-rows: auto;
 }
@@ -683,7 +683,9 @@ div.interviewgrid3 {
 	grid-row: 1/2;
 	font-size: 4em;
 	font-weight: bold;
-	margin-top: -20px;
+	margin-top: -30px;
+	margin-right: 40px;
+	text-align: right;
 }
 
 .cdmxdescription {
