--- a/style.css
+++ b/style.css
@@ -674,7 +674,7 @@ div.interviewgrid3 {
 
 .cdmximg {
 	grid-column: 1/5;
-	grid-row: 2/4;
+	grid-row: 2/3;
 	padding: 10px;
 }
 
@@ -695,11 +695,13 @@ div.interviewgrid3 {
 
 .wanderpicture {
 	grid-column: 1/5;
-	grid-row: 4/6;
+	grid-row: 3/4;
+	display: flex;
+	align-content: right;
 }
 
 .wanderpicture img {
-	max-width: 200px;
+	max-width: 300px;
 	width: 100%;
 }
 
