--- a/style.css
+++ b/style.css
@@ -396,9 +396,11 @@ margin-top: 20px;
 }
 
 .socialmedia-row {
+	width: 100%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	align-content:space-between;
 }
 
 .linebackground {
