--- a/style.css
+++ b/style.css
@@ -391,8 +391,9 @@ a.readmore {
 	display: flex;
 	flex-direction: column;
 	border-top: 3px black solid;
-	padding: 20px;
+	padding: 10px;
 margin-top: 20px;
+	background-color: black;
 }
 
 .socialmedia-row {
