--- a/style.css
+++ b/style.css
@@ -662,7 +662,9 @@ div.interviewgrid3 {
 }
 
 .cdmximg {
-	max-width: 400px;
+	max-width: 300px;
+	max-height: 300px;
+	height: auto;
 	width: 100%;
 }
 
