--- a/style.css
+++ b/style.css
@@ -663,7 +663,8 @@ div.interviewgrid3 {
 
 .cdmximg {
 	max-width: 300px;
-	max-height: 300px;
+	max-height: 350px;
+	margin-right: -20px;
 	height: auto;
 	width: 100%;
 }
