--- a/style.css
+++ b/style.css
@@ -729,9 +729,7 @@ div.interviewgrid3 {
     background-color: rgba(0, 0, 0, 0.7);
     width: 50px;
     height: 50px;
-    display: flex;
-	justify-content: center;
-	align-items: center;
+    display: block;
     text-decoration: none;
     -webkit-border-radius: 35px;
     -moz-border-radius: 35px;
@@ -747,7 +745,9 @@ div.interviewgrid3 {
 	
 	color: #fff;
     margin: 0;
-   
+    position: relative;
+    left: 12px;
+    top: 13px;
     font-size: 24px;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
