--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ h4 {
 a {
 	color: #0da5dc;
 }
+.sidebar-footer a:hover:not(.btn), .sidebar-footer a:focus:not(.btn), .footer-nav-menu a:hover:not(.btn), .footer-nav-menu a:focus:not(.btn),
 a:hover,
 a:focus {
 	color: #0da5dc;
