--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ a:focus {
 	opacity: .75;
 }
 
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+	color: #0da5dc;
+	background-color: black;
+}
 
 
 /* PUT ANY NEW STYLES TO USE IN YOUR CONTENT AREAS HERE SO YOU CAN EASILY PASTE THIS
