--- a/style.css
+++ b/style.css
@@ -781,9 +781,9 @@ div.interviewgrid3 {
 	margin-right: 0;
 }
 
-.category-top-grid {
+img.category-hero {
 	
-	height: 100%;
+	height: 80vh;
 }
 
 
