--- a/style.css
+++ b/style.css
@@ -782,10 +782,6 @@ div.interviewgrid3 {
 	margin-right: 0;
 }
 
-.category-top-grid {
-	height: 100vh;
-}
-
 
 
 /* media queries */
@@ -884,5 +880,164 @@ div.interviewgrid3 {
 	z-index: 610;
 	text-shadow: 0px 0px 1px black;
 }
+
+	div.interviewgrid1 {
+	width: 100%;
+	height: auto;
+	display: grid;
+	margin: 40px 0;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows:auto;
+}
+
+div.interviewgrid1 .interviewhero {
+	grid-column: 1/3;
+	grid-row: 2/3;
+}
+
+div.interviewgrid1 .interviewheadline {
+	grid-column: 1/3;
+	grid-row: 1/2;
+	font-size: calc(1vw + 1vh + 1vmin);
+	line-height: auto;
+}
+
+div.interviewgrid1 .interviewintro {
+	grid-column: 1/3;
+	grid-row: 3/4;
+	font-weight: bold;
+	font-size: calc(16px + 1vh);
+}
+
+.questionstyle {
+	font-size: calc(16px + 0.5vh);
+	font-weight: bold;
+	color: darkmagenta;
+	margin-left: 10px;
+}
+
+div.interviewgrid2 {
+	display: grid;
+	height: auto;
+	width: 100%;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto;
+	margin: 40px 0;
+}
+
+.interviewimage1 {
+	grid-column: 1/3;
+	grid-row: 1/2;
+}
+
+.interviewquote {
+	grid-column: 1/3;
+	grid-row: 2/3;
+	font-size: calc(0.8vw + 0.8vh + 0.8vmin);
+	background-color: rgba(250,250,250,0.7);
+	padding: 10px;
+	margin-left: 20px;
+}
+
+div.interviewgrid3 {
+	display: grid;
+	height: auto;
+	width: 100%;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto;
+	margin: 40px 0;
+}
+.interviewimage2 {
+	grid-column: 1/3;
+	grid-row: 1/2;
+}
+
+.interviewquote2 {
+	grid-column: 1/3;
+	grid-row: 2/3;
+	font-size: calc(0.8vw + 0.8vh + 0.8vmin);
+	background-color: rgba(250,250,250,0.7);
+	padding: 10px;
+	margin-left: 20px;
+}
+	
+	
+.wandertop {
+	height: auto;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto;
+	margin: 40px auto;
+}
+.svgmap {
+	
+	width: auto;
+	height: 100vh;
+	grid-columns: 1/3;
+	grid-rows: 2/5;
+}
+
+#svgmapitself {
+	width: auto;
+	height: 100vh;
+}
+
+.cdmximg {
+	max-width: 350px;
+	max-height: 350px;
+	float: right;
+	height: auto;
+	width: 100%;
+}
+
+
+
+.wanderheadline {
+	grid-columns: 1/3;
+	grid-rows: 1/2;
+}
+
+.cdmxcard {
+	padding-top: 100px;
+	display: grid;
+	height: auto;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: auto;
+}
+
+.cdmximg {
+	grid-column: 1/3;
+	grid-row: 2/3;
+	padding: 10px;
+}
+
+.cdmxtitle {
+	grid-column: 1/3;
+	grid-row: 1/2;
+	font-size: 2em;
+	font-weight: bold;
+	margin-top: -10px;
+	margin-right: 10px;
+	text-align: right;
+}
+
+.cdmxdescription {
+	grid-column: 1/3;
+	grid-row: 3/5;
+}
+
+.wanderpicture {
+	grid-column: 1/3;
+	grid-row: 5/6;
+	margin-top: 0;
+	
+}
+
+.wanderpicture img {
+	width: 100%;
+	max-height: 300px;
+}
+
 
 	}
