--- a/style.css
+++ b/style.css
@@ -972,8 +972,8 @@ div.interviewgrid3 {
 }
 .svgmap {
 	
-	width: auto;
-	height: 100vh;
+	width: 100vw;
+	height: auto;
 	grid-columns: 1/3;
 	grid-rows: 2/5;
 }
