--- a/style.css
+++ b/style.css
@@ -658,8 +658,8 @@ div.interviewgrid3 {
 	
 	width: auto;
 	height: 100vh;
-	grid-columns: 1/5;
-	grid-rows: 1/4;
+	grid-column: 1/5;
+	grid-row: 1/4;
 }
 
 #svgmapitself {
@@ -678,8 +678,8 @@ div.interviewgrid3 {
 
 
 .wanderheadline {
-	grid-columns: 4/6;
-	grid-rows: 1/3;
+	grid-column: 4/6;
+	grid-row: 1/3;
 }
 
 .cdmxcard {
@@ -974,8 +974,8 @@ div.interviewgrid3 {
 	
 	width: 100vw;
 	height: auto;
-	grid-columns: 1/3;
-	grid-rows: 2/5;
+	grid-column: 1/3;
+	grid-row: 2/5;
 }
 
 #svgmapitself {
@@ -994,8 +994,8 @@ div.interviewgrid3 {
 
 
 .wanderheadline {
-	grid-columns: 1/3;
-	grid-rows: 1/2;
+	grid-column: 1/3;
+	grid-row: 1/2;
 }
 
 .cdmxcard {
