--- a/style.css
+++ b/style.css
@@ -678,7 +678,7 @@ div.interviewgrid3 {
 
 
 .wanderheadline {
-	grid-column: 4/6;
+	grid-column: 5/6;
 	grid-row: 1/3;
 }
 
@@ -723,6 +723,9 @@ div.interviewgrid3 {
 	max-height: 300px;
 }
 
+	.wandertop .mobile-hero {
+		visibility: hidden;
+	}
 
 /* back to top arrow */
 
@@ -972,11 +975,14 @@ div.interviewgrid3 {
 }
 .svgmap {
 	
-	width: 100vw;
-	height: auto;
-	grid-column: 1/3;
-	grid-row: 2/5;
+	visibility: hidden;
 }
+	
+	.wandertop .mobile-hero {
+		visibility:visible;
+		grid-column: 1/3;
+	grid-row: 2/3;
+	}
 
 #svgmapitself {
 	width: auto;
