--- a/style.css
+++ b/style.css
@@ -789,6 +789,18 @@ div.interviewgrid3 {
 
 /* media queries */
 
+@media only screen and (max-width: 1800px){
+		
+
+.pictureheadline h1 {
+	font-size: calc(3vw + 3vh + 1vmin);
+	line-height: 1em;
+	font-weight: bold;
+	text-shadow: 0px 0px 1px black;
+}
+	
+}
+
 @media only screen and (max-width: 768px){
 		
 		/* featured styles */
@@ -901,7 +913,7 @@ div.interviewgrid1 .interviewhero {
 div.interviewgrid1 .interviewheadline {
 	grid-column: 1/3;
 	grid-row: 1/2;
-	font-size: calc(1vw + 1vh + 1vmin);
+	font-size: calc(2vw + 2vh + 2vmin);
 	line-height: auto;
 }
 
