--- a/style.css
+++ b/style.css
@@ -789,11 +789,11 @@ div.interviewgrid3 {
 
 /* media queries */
 
-@media only screen and (max-width: 1800px){
+@media only screen and (min-width: 1800px){
 		
 
 .pictureheadline h1 {
-	font-size: calc(3vw + 3vh + 1vmin);
+	font-size: calc(2.5vw + 2.5vh + 2vmin);
 	line-height: 1em;
 	font-weight: bold;
 	text-shadow: 0px 0px 1px black;
