--- a/style.css
+++ b/style.css
@@ -792,7 +792,15 @@ div.interviewgrid3 {
 @media only screen and (min-width: 1800px){
 		
 
-.interviewheadline h1 {
+.interviewheadline{
+	font-size: calc(2.5vw + 2.5vh + 2vmin);
+	line-height: 1em;
+	font-weight: bold;
+	text-shadow: 0px 0px 1px black;
+}
+	
+	
+.pictureheadline h1 {
 	font-size: calc(2.5vw + 2.5vh + 2vmin);
 	line-height: 1em;
 	font-weight: bold;
