--- a/style.css
+++ b/style.css
@@ -810,6 +810,26 @@ div.interviewgrid1 .interviewheadline {
 }
 
 @media only screen and (max-width: 768px){
+	
+	
+#site-branding .container {
+	display: grid;
+	grid-template-rows: auto;
+	grid-template-columns: repeat(2, 1fr);
+	
+}
+
+.site-logo {
+	grid-column: 1/3;
+	grid-row: 1/2;
+}
+
+.currentissueheader {
+	grid-column: 1/3;
+	grid-row: 2/3;
+	
+}
+
 		
 		/* featured styles */
 
